# related-work-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  main.py  streamlit_app.py
app/api/: routes.py
app/core/: __init__.py  config.py  logging.py
app/models/: __init__.py  schemas.py  workflow_state.py
app/prompts/: intent_decompose.txt  method_extract.txt  related_work_write.txt  verify.txt
app/services/: __init__.py  arxiv_client.py  llm_client.py  paper_downloader.py  paper_reader.py  prompt_service.py  reranker.py
app/utils/: json_utils.py  text_utils.py
app/workflows/: __init__.py  related_work_workflow.py
output/: 3d-open-world-semantic-segmentation-streamlit.json  3d开放世界语义分割-streamlit.json  retrieval-augmented-generation-streamlit.json  retrieval-augmented-generation_20260320_140008.json  retrieval-augmented-generation_20260320_140234.json  retrieval-augmented-generation_20260320_140637.json
tests/: test_api_health.py  test_arxiv_client.py  test_intent_decomposition.py  test_method_card_schema.py  test_paper_reader.py  test_reranker.py
tests/fixtures/: arxiv_sample.xml
