[project]
name = "related-work-agent"
version = "0.1.0"
description = "Workflow agent for generating paper related work from arXiv papers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "streamlit>=1.39.0",
    "langgraph>=0.2.34",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "pymupdf4llm",
    "pymupdf",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
]
